--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -2,9 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 10px;
+    // font-size: 10px;
+
+}
+
+html {
+    font-size: 62.5%;
 }
 
 body {
-    background: #212529;
+    background: #171a1c;
 }
