--- a/src/components/Profile/PassedTestCard/PassedTestCard.module.scss
+++ b/src/components/Profile/PassedTestCard/PassedTestCard.module.scss
@@ -2,24 +2,48 @@
     margin-top: 1rem;
     display: flex;
     cursor: pointer;
-    align-items: center;
     width: 100%;
-    height: 8rem;
-    padding: 1rem;
-    // margin: 2rem 1rem 2rem 1rem;
-    background-color: #111415;
+    height: 100%;
+    // padding: 1rem;
+    // background-color: #343a40;
+    background-color: #181b1e;
     border-radius: 0.5rem;
     // border-bottom: 1px solid #adb5bd17;
     &:hover {
         background-color: #212529;
+
+        & .coverTest {
+            opacity: 0.4;
+        }
+    }
+
+    @media (min-width: 700px) {
+        // height: 13rem;
     }
 }
 
-.coverTest {
+.divPaddingContainer {
+    display: flex;
+    align-items: flex-end;
+    // width: 100%;
     height: 100%;
-    width: 20%;
+    padding: 1rem  1rem  1rem 1.5rem;
+}
+
+.coverTest {
+    // height: 100%;
+    width: 35%;
     object-fit: cover;
-    object-position: 0 0;
+    object-position: 50% 0;
+    border-radius: 0.5rem 0 0 0.5rem;
+
+    &:hover {
+        opacity: 0.4;
+    }
+
+    @media (min-width: 700px) {
+        width: 40%;
+    }
 }
 
 .textDiv {
@@ -29,32 +53,80 @@
     justify-content: space-between;
 }
 
-.titleTest,
-.status,
-.status span {
-    margin: 0 1rem 0 1rem;
+.titleTest {
+    font-size: 2rem;
+    font-weight: 500;
+    color: #adb5bd;
+
+    @media (min-width: 700px) {
+        font-size: 1.4rem;
+    }
+}
+
+.divCenterBlogger {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+    // border-bottom: 1px solid rgba(43, 49, 55, 0.486);
+}
+
+.bloggerName  {
+    display: inline-block;
+    margin-left: 0.5rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    color: #ced7df;
+
+    @media (min-width: 700px) {
+        font-size: 1.2rem;
+    }
+}
+
+.bloggerAvatar {
+    border-radius: 50%;
+    height: 2.5rem;
+    
+    @media (min-width: 700px) {
+        height: 2rem;
+    }
+}
+
+.divResult {
+    display: flex;
+    align-items: center;
+    // border-top: 1px solid rgba(43, 49, 55, 0.486);
+    padding-top: 0.5rem;
+    // justify-content: space-between;
+    height: 6rem;
+
+    @media (min-width: 700px) {
+        height: 5rem;
+    }
+}
+
+.status {
+    // display: inline-block;
     font-size: 1.6rem;
     font-weight: 500;
     color: #adb5bd;
+    width: 50%;
+    padding-right: 2rem;
+    flex-grow: 1;
+
+    @media (min-width: 700px) {
+        font-size: 1.1rem;
+    }
 }
 
-// .statusIcon {
-//     height: 100%;
-//     margin-right: 1rem;
-//     border: 1px solid #46494d72;
-//     border-radius: 50%;
-//     padding: 1.5rem;
-// }
-
 .statusIcon {
-    height: 90%;
-    opacity: 0.1;
-    margin-right: -1.5rem;
+    height: 80%;
+    opacity: 0.2;
+    margin-right: -1rem;
 }
 
 .IconBigBackgroung {
     width: 40%;
-    opacity: 0.1;
+    opacity: 0.3;
     margin-bottom: -1rem;
 }
 
