--- a/src/components/Profile/ProfileHeader/ProfileHeader.module.scss
+++ b/src/components/Profile/ProfileHeader/ProfileHeader.module.scss
@@ -3,7 +3,7 @@
     width: 100%;
     justify-content: flex-start;
     align-items: flex-end;
-    padding-bottom: 2rem;
+    padding: 1rem 0 2rem 0;
     border-bottom: 1px solid #adb5bd2b;
 
 }
@@ -15,9 +15,9 @@
     margin-right: 2rem;
 }
 .name {
-    text-align: center;
-    margin: 2rem 0 1rem 0;
-    font-size: 2rem;
+    text-align: left;
+    margin: 2rem 0 0.5rem 0;
+    font-size: 1.8rem;
     font-weight: 900;
     color: #adb5bd;
 }
@@ -35,9 +35,19 @@
 .btnLogout {
     background: none;
     border: none;
+    font-size: 1.2rem;
     color: #adb5bd;
+    cursor: pointer;
 
-    &:hover {
-        color: aquamarine;
+    & i {
+        & img {
+            padding-top: 1px;
+            height: 1rem;
+        } 
     }
+
+    // &:hover {
+    //     color: aquamarine;
+    // }
 }
+
