--- a/src/components/Result/CircleBar/CircleBar.module.scss
+++ b/src/components/Result/CircleBar/CircleBar.module.scss
@@ -9,6 +9,7 @@
     border-radius: 50%; 
     display: grid;
     place-items: center;
+    flex-shrink: 0;
 
     &:before {
         content: '';
@@ -23,6 +24,6 @@
 
 .valueContainer {
     position: absolute;
-    font-size: calc(var(--size)*8);
+    // font-size: calc(var(--size)*8);
     color: #3bc9db;
 }
