--- a/src/components/Test/RadioInput/RadioInput.module.scss
+++ b/src/components/Test/RadioInput/RadioInput.module.scss
@@ -13,8 +13,8 @@ input[type="radio"] {
 
 .radioContainer {
     width: 100%;
-    height: 10rem;
-    margin: 1px 0 1px 0;
+    height: 100%;
+    margin: 2px 0 2px 0;
     cursor: pointer;
 }
 
@@ -22,14 +22,17 @@ input[type="radio"] {
 .textContainerChecked {
     cursor: pointer;
     height: 100%;
+    min-height: 5rem;
     width: 100%;
     padding: 1rem;
     background-color: #343a40;
-    // background-color: #212529;
+   
+
+    background-color: #212529;
     border-radius: 0.5rem;
 
     & span {
-        font-size: 1.6rem;;
+        font-size: 1.4rem;;
         color: #ced4da;
     }
 }
