--- a/src/components/Profile/TestCard/TestCard.module.scss
+++ b/src/components/Profile/TestCard/TestCard.module.scss
@@ -1,25 +1,21 @@
 .testCardContainter {
     margin-top: 1rem;
-    display: flex;
+    display: grid;
+    grid-template-columns: 4fr 6fr;
     cursor: pointer;
     width: 100%;
     height: 100%;
-    // padding: 1rem;
-    // background-color: #343a40;
+
     background-color: #181b1e;
     border-radius: 0.5rem;
-    // border-bottom: 1px solid #adb5bd17;
     &:hover {
         background-color: #212529;
 
-        & .coverTest {
+        & .coverFrame {
             opacity: 0.4;
         }
     }
 
-    @media (min-width: 700px) {
-        height: 13rem;
-    }
 }
 
 .divPaddingContainer {
@@ -30,19 +26,11 @@
     padding: 1rem  1rem  0.5rem 1.5rem;
 }
 
-.coverTest {
-    width: 35%;
-    object-fit: cover;
-    object-position: 50% 0;
+.coverFrame {
+    position: relative;
+    width: 100%;
+    height: 100%;
     border-radius: 0.5rem 0 0 0.5rem;
-
-    &:hover {
-        opacity: 0.4;
-    }
-
-    @media (min-width: 700px) {
-        width: 40%;
-    }
 }
 
 .textDiv {
@@ -53,7 +41,7 @@
 }
 
 .titleTest {
-    font-size: 2rem;
+    font-size: 1.6rem;
     font-weight: 500;
     color: #adb5bd;
 
@@ -66,7 +54,6 @@
     display: flex;
     align-items: center;
     margin-bottom: 1rem;
-    // border-bottom: 1px solid rgba(43, 49, 55, 0.486);
 }
 
 .bloggerName  {
@@ -93,20 +80,12 @@
 .divResult {
     display: flex;
     align-items: center;
-    // border-top: 1px solid rgba(43, 49, 55, 0.486);
     padding-top: 0.5rem;
-    // justify-content: space-between;
-    // height: 40%;
     height: 6rem;
-
-    // @media (min-width: 700px) {
-    //     height: 40%;
-    // }
 }
 
 .status {
-    // display: inline-block;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-weight: 500;
     color: #adb5bd;
     width: 50%;
