--- a/src/components/Profile/TestCard/TestCardPass/TestCardPass.module.scss
+++ b/src/components/Profile/TestCard/TestCardPass/TestCardPass.module.scss
@@ -1,9 +1,14 @@
-// .coverOpen {
-//     height: 100%;
-//     width: 100%;
-//     object-fit: cover;
-//     object-position: 0 0;
-// }
+.statusIcon {
+    height: 3.5rem;
+    opacity: 0.2;
+    margin-right: -1rem;
+}
+
+.IconBigBackgroung {
+    width: 40%;
+    opacity: 0.3;
+    margin-bottom: -1rem;
+}
 
 .coverOpen {
     position: relative;
