--- a/src/components/Profile/TestCard/TestCard.module.scss
+++ b/src/components/Profile/TestCard/TestCard.module.scss
@@ -112,7 +112,8 @@
 
 .status,
 .status span {
-    color: #3bc9db;
+    // color: #3bc9db;
+    color: #F59F00;
     & span {
         font-weight: 900;
     }
