--- a/src/components/Auth/OAuth.module.scss
+++ b/src/components/Auth/OAuth.module.scss
@@ -1,5 +1,6 @@
 .circleFrame {
     z-index: 100;
+    
     transform: translate(0%, -50%);
     background-color: #1a1e21fc;
     border: 1px solid #fbbc05;
@@ -21,13 +22,14 @@
 .regGmail {
     cursor: pointer;
     margin-top: 1rem;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-weight: 700;
     // color: #4285f4;
     color: #fbbc05;
 }
 
 .btnG {
+    margin-top: 4rem;
     cursor: pointer;
     background: none;
     border: none;
