--- a/src/components/Profile/ButtonPlay/ButtonPlay.module.scss
+++ b/src/components/Profile/ButtonPlay/ButtonPlay.module.scss
@@ -19,6 +19,7 @@
 
     &:hover,
     &:active {
+        // background-color: #3bc8db8f;
         background-color: #3bc9db;
     }
     
@@ -35,7 +36,8 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-40%,-50%);
+        // transform: translate(-40%,-50%);
+        transform: translate(-50%,-50%);
         height: calc(var(--sizeBtnPlay)*2);
         color: #3bc9db;
         z-index: 10;
