--- a/src/components/Profile/ProfileSection/ProfileSection.module.scss
+++ b/src/components/Profile/ProfileSection/ProfileSection.module.scss
@@ -1,10 +1,23 @@
 .profileSection {
     width: 100%;
+    margin: 3rem 0 1rem 0;
 }
-.titleSection {
+.title {
     text-align: left;
-    margin: 5rem 0 1rem 0;
+    
     font-size: 2rem;
     font-weight: 900;
+    // color: #d7e0e9;
+    color: #f59f00;
+}
+
+.description {
+    margin-top: 1rem;
+    font-size: 1.6rem;
+    font-weight: 500;
     color: #adb5bd;
+
+    @media (min-width: 700px) {
+        font-size: 1.4rem;
+    }
 }
