--- a/src/components/Result/CircleBar/CircleBar.module.scss
+++ b/src/components/Result/CircleBar/CircleBar.module.scss
@@ -25,5 +25,6 @@
 .valueContainer {
     position: absolute;
     // font-size: calc(var(--size)*8);
-    color: #3bc9db;
+    // color: #3bc9db;
+    color: #F59F00;
 }
