I've shipped first full worked MVP on domain and got a first feedback by user. No bugs. Have 1 nice idea for a new feature by user

--- a/src/components/Containers/Container/Container.module.scss
+++ b/src/components/Containers/Container/Container.module.scss
@@ -7,7 +7,7 @@
     min-height: 100vh;
 
     // justify-content: flex-end;
-    padding: 4rem 2rem 6rem 2rem;
+    padding: 2rem 2rem 6rem 2rem;
 
     max-width: 100%;
     margin-left: auto;
@@ -28,5 +28,5 @@
     position: absolute;
     top: 0;
     z-index: -10;
-    height: 100vh;
+    height: 100%;
 }
