--- a/src/components/Containers/NavSidebar/NavSidebar.module.scss
+++ b/src/components/Containers/NavSidebar/NavSidebar.module.scss
@@ -1,3 +1,12 @@
+@import "../../../style/variables.scss";
+// $colorAccentOrange;
+
+:root {
+    --toastify-icon-color-success: #F59F00 !important;
+    --toastify-color-success: #F59F00 !important;
+}
+
 .sideBarNav {
     align-self: flex-end;
 }
+
