--- a/src/components/Test/Buttons/ButtonNav.module.scss
+++ b/src/components/Test/Buttons/ButtonNav.module.scss
@@ -4,7 +4,7 @@
     width: 100%;
     cursor: pointer;
     border: none;
-    color: #3bc9db;
+    color: 
     font-size: 1.2rem;
     border-radius: 3rem;
 
