--- a/src/components/Profile/ProfileHeader/ProfileHeader.module.scss
+++ b/src/components/Profile/ProfileHeader/ProfileHeader.module.scss
@@ -1,4 +1,6 @@
 .headerProfile {
+    // margin from Logo
+    margin-top: 3rem;
     display: flex;
     width: 100%;
     justify-content: flex-start;
@@ -9,10 +11,10 @@
 }
 .avatar {
     background-color: #adb5bd;
-    width: 8rem;
-    height: 8rem;
+    width: 6rem;
+    height: 6rem;
     border-radius: 50%;
-    margin-right: 2rem;
+    margin-right: 1rem;
 }
 .name {
     text-align: left;
