--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -2,3 +2,5 @@ $colorAccentOrange: #F59F00;
 $colorBorderLight: #f59f0091;
 $backColorTransparent: #f59f0035;
 $colorDarkOrange: #ac7002c8;
+
+$back: #000000a0; 
