--- a/src/components/Test/RadioInput/RadioInput.module.scss
+++ b/src/components/Test/RadioInput/RadioInput.module.scss
@@ -12,7 +12,9 @@ input[type="radio"] {
 }
 
 .textContainer,
-.textContainerChecked {
+.textContainerChecked, 
+.textContainerTrue,
+.textContainerFalse {
     cursor: pointer;
     height: 100%;
     min-height: 5rem;
@@ -34,5 +36,21 @@ input[type="radio"] {
     background-color: #2125295a;
     & span {
         color: $colorAccentOrange;
+    }
+}
+
+.textContainerTrue {
+    border: 1px solid $colorAccentOrange;
+    background-color: $colorAccentOrange;
+    & span {
+        color: #212529;
+    }
+}
+
+.textContainerFalse {
+    border: 1px solid rgba(227, 8, 44, 0.416);
+    background-color: rgba(227, 8, 44, 0.416);
+    & span {
+        color: white;
     }
 }
