--- a/src/components/Containers/Container/Container.module.scss
+++ b/src/components/Containers/Container/Container.module.scss
@@ -1,3 +1,5 @@
+
+
 .containerBack {
     position: relative;
     display: flex;
@@ -24,9 +26,36 @@
     }
 }
 
-.backImage {
+.backImage, 
+.lockedImage,
+.fullScreen {
     position: absolute;
     top: 0;
     z-index: -10;
     height: 100%;
+}
+
+.lockedImage {
+    filter: blur(6px) ;
+    -webkit-filter: blur(6px);
+}
+
+.fullScreen {
+    z-index: 200;
+}
+
+.iconLock {
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 50;
+    opacity: 0.5;
+
+    width: 6rem;
+    height: 6rem;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url('../../../assets/svg/lock.svg');
 }
