Added BtnRectangle with Розробник-Співпраця 2.@media css for small screen 320px iphone 5/SE etc.

--- a/src/components/Containers/NavSidebar/NavSidebar.module.scss
+++ b/src/components/Containers/NavSidebar/NavSidebar.module.scss
@@ -10,3 +10,11 @@
     align-self: flex-end;
 }
 
+.divDeveloper {
+    display: flex;
+    flex-direction: column;
+    // align-self: flex-end;
+    position: absolute;
+    top: 2rem;
+    align-self: flex-start;
+}
