--- a/src/components/Profile/TestCard/TestCard.module.scss
+++ b/src/components/Profile/TestCard/TestCard.module.scss
@@ -12,7 +12,13 @@
         background-color: #212529;
 
         & .coverFrame {
-            opacity: 0.4;
+            // opacity: 0.4;
+        }
+
+        & .coverOpen {
+            &::before {
+                background-color: transparent;
+            }
         }
     }
 
@@ -27,10 +33,12 @@
 }
 
 .coverFrame {
+    // opacity: 0.5;
     position: relative;
     width: 100%;
     height: 100%;
     border-radius: 0.5rem 0 0 0.5rem;
+
 }
 
 .textDiv {
@@ -121,4 +129,31 @@
 
 .flexGrow {
     flex-grow: 1;
+}
+
+
+.coverOpen {
+    position: relative;
+    width: 100%;
+    height: 100%;
+
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    border-radius: 0.5rem 0 0 0.5rem;
+
+    &::before {
+        content: '';
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        background-color: #0606067f;
+    }
+
+    // &:hover {
+    //     &::before {
+    //         background-color: transparent;
+    //     }
+    // }
 }
