--- a/src/components/Profile/TestCard/TestCardOpen/TestCardOpen.module.scss
+++ b/src/components/Profile/TestCard/TestCardOpen/TestCardOpen.module.scss
@@ -15,4 +15,12 @@
     background-size: cover;
 
     border-radius: 0.5rem 0 0 0.5rem;
+
+    &::before {
+        content: '';
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        background-color: #0606067f;
+    }
 }
