--- a/src/components/Profile/TestCard/TestCardPass/TestCardPass.module.scss
+++ b/src/components/Profile/TestCard/TestCardPass/TestCardPass.module.scss
@@ -20,4 +20,18 @@
     background-size: cover;
 
     border-radius: 0.5rem 0 0 0.5rem;
+
+    &::before {
+        content: '';
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        background-color: #0606067f;
+    }
+
+    &:hover {
+        &::before {
+            background-color: transparent;
+        }
+    }
 }
