--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,6 +8,14 @@
 
 html {
     font-size: 62.5%;
+    // font-size: 50%;
+    @media only screen 
+        and (min-device-width: 320px) 
+        and (max-device-width: 360px)
+        and (-webkit-min-device-pixel-ratio: 2)
+        and (orientation: portrait) {
+            font-size: 50%;
+        }
 }
 
 body {
