--- a/src/components/Profile/ProfileHeader/ProfileHeader.module.scss
+++ b/src/components/Profile/ProfileHeader/ProfileHeader.module.scss
@@ -1,10 +1,13 @@
+@import "../../../style/variables.scss";
+
 .headerProfile {
     // margin from Logo
     margin-top: 6rem;
     display: flex;
     width: 100%;
     justify-content: flex-start;
-    align-items: flex-end;
+    // align-items: flex-end;
+    align-items: flex-start;
     padding: 1rem 0 2rem 0;
     border-bottom: 1px solid #adb5bd2b;
 
@@ -15,6 +18,9 @@
     height: 6rem;
     border-radius: 50%;
     margin-right: 1rem;
+    object-fit: cover;
+    object-position: center center;
+    flex-shrink: 0;
 }
 .name {
     text-align: left;
@@ -23,9 +29,16 @@
     font-weight: 900;
     color: #adb5bd;
 }
-.details {
-    font-size: 1.2rem;
+.details,
+.details p {
+    cursor: pointer;
+    font-size: 1.4rem;
     color: #adb5bd;
+    margin-bottom: 1rem;
+
+    & span {
+        color: $colorAccentOrange;
+    }
 }
 
 .btnDiv {
@@ -51,5 +64,6 @@
     // &:hover {
     //     color: aquamarine;
     // }
+
 }
 
