--- a/src/components/Containers/Container/Container.module.scss
+++ b/src/components/Containers/Container/Container.module.scss
@@ -9,7 +9,7 @@
     min-height: 100vh;
 
     // justify-content: flex-end;
-    padding: 2rem 2rem 6rem 2rem;
+    padding: 2rem;
 
     max-width: 100%;
     margin-left: auto;
