--- a/src/components/Profile/TestCard/TestCard.module.scss
+++ b/src/components/Profile/TestCard/TestCard.module.scss
@@ -1,10 +1,12 @@
 .testCardContainter {
+    position: relative;
     margin-top: 1rem;
     display: grid;
     grid-template-columns: 4fr 6fr;
     cursor: pointer;
     width: 100%;
-    height: 100%;
+    height: 15rem;
+    //height: 100%; have bug in Safari
 
     background-color: #181b1e;
     border-radius: 0.5rem;
@@ -33,12 +35,30 @@
 }
 
 .coverFrame {
-    // opacity: 0.5;
+    width: 100%;
+    // height: 100%;
+    height: 15rem;
+    border-radius: 0.5rem 0 0 0.5rem;
+}
+
+.coverOpen {
     position: relative;
     width: 100%;
     height: 100%;
+
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
     border-radius: 0.5rem 0 0 0.5rem;
 
+    &::before {
+        content: '';
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        background-color: #0606067f;
+    }
 }
 
 .textDiv {
@@ -129,31 +149,4 @@
 
 .flexGrow {
     flex-grow: 1;
-}
-
-
-.coverOpen {
-    position: relative;
-    width: 100%;
-    height: 100%;
-
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
-    border-radius: 0.5rem 0 0 0.5rem;
-
-    &::before {
-        content: '';
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        background-color: #0606067f;
-    }
-
-    // &:hover {
-    //     &::before {
-    //         background-color: transparent;
-    //     }
-    // }
 }
