--- a/src/components/Profile/ProfileSection/ProfileSection.module.scss
+++ b/src/components/Profile/ProfileSection/ProfileSection.module.scss
@@ -16,6 +16,7 @@
     font-size: 1.6rem;
     font-weight: 500;
     color: #adb5bd;
+    line-height: 1.3;
 
     @media (min-width: 700px) {
         font-size: 1.4rem;
