--- a/src/components/Profile/TestCard/TestCard.module.scss
+++ b/src/components/Profile/TestCard/TestCard.module.scss
@@ -150,3 +150,16 @@
 .flexGrow {
     flex-grow: 1;
 }
+
+.policyLink {
+    color: '#adb5bdaa' !important;
+    font-size: '1.2rem' !important;
+    margin-top: '1rem';
+
+    & a,
+    a:active {
+        color: '#adb5bdaa';
+        font-size: '1.2rem';
+        margin-top: '1rem';
+    }
+}
