--- a/src/components/Test/TestHeader/TestHeader.module.scss
+++ b/src/components/Test/TestHeader/TestHeader.module.scss
@@ -35,6 +35,7 @@
     color: $colorAccentOrange;
     margin-right: 25%;
     margin-bottom: 0.5rem;
+    // color: #8a8f94;
 }
 
 .divText {
@@ -45,5 +46,6 @@
     text-align: left;
     margin-left: 0.5rem;
     width: 100%;
+    // color: #adb5bdd2;
 }
 
