--- a/src/components/Containers/Container/Container.module.scss
+++ b/src/components/Containers/Container/Container.module.scss
@@ -21,7 +21,8 @@
     overflow-y: scroll;
 
     @media (min-width: 700px) {
-        max-width: 36rem;
+        // max-width: 36rem;
+        max-width: 40rem;
         padding: 2rem;
     }
 }
