--- a/src/components/Profile/TestCard/TestCard.module.scss
+++ b/src/components/Profile/TestCard/TestCard.module.scss
@@ -63,6 +63,7 @@
 
 .textDiv {
     height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -94,6 +95,20 @@
     @media (min-width: 700px) {
         font-size: 1.2rem;
     }
+
+    @media only screen 
+    and (device-width: 375px) 
+    and (device-height: 667px) 
+    and (-webkit-device-pixel-ratio : 2) { 
+            font-size: 1.2rem;
+    }
+
+    @media only screen 
+    and (device-width : 375px) 
+    and (device-height : 812px) 
+    and (-webkit-device-pixel-ratio : 3) { 
+        font-size: 1.2rem;
+    }
 }
 
 .bloggerAvatar {
@@ -122,7 +137,21 @@
     flex-grow: 1;
 
     @media (min-width: 700px) {
-        font-size: 1.1rem;
+        font-size: 1.2rem;
+    }
+
+    @media only screen 
+    and (device-width: 375px) 
+    and (device-height: 667px) 
+    and (-webkit-device-pixel-ratio : 2) { 
+        font-size: 1.2rem;
+    }
+
+    @media only screen 
+    and (device-width : 375px) 
+    and (device-height : 812px) 
+    and (-webkit-device-pixel-ratio : 3) { 
+        font-size: 1.2rem;
     }
 }
 
