--- a/src/components/Test/ProgressBar/ProgressBar.module.scss
+++ b/src/components/Test/ProgressBar/ProgressBar.module.scss
@@ -84,6 +84,11 @@
         text-align: center;
         color: #e3eaf1;
 
+        @media (min-width: 700px) {
+            font-size: 1.4rem;
+            font-weight: 700;
+        }
+
         & span {
             background-color: #00000098;
             padding: 4px;
