--- a/src/components/Profile/BtnRectangle/BtnRectangle.module.scss
+++ b/src/components/Profile/BtnRectangle/BtnRectangle.module.scss
@@ -14,7 +14,7 @@
 
     color: $colorAccentOrange;
     border: 1px solid $colorBorderLight;
-    border-radius: 4px;
+    border-radius: 2rem;
     
     // text-decoration: underline;
     background-color: transparent;
