--- a/src/components/Bloggers/BloggersHeader/BloggersHeader.module.scss
+++ b/src/components/Bloggers/BloggersHeader/BloggersHeader.module.scss
@@ -2,12 +2,13 @@
 
 .headerProfile {
     // margin from Logo
-    margin-top: 1rem;
+    margin: 1rem 0 0rem 0;
     display: flex;
     width: 100%;
+    
     justify-content: flex-start;
-    // align-items: flex-end;
     align-items: flex-end;
+    // align-items: flex-start;
     padding: 1rem 0 2rem 0;
     // line
     // border-bottom: 1px solid #adb5bd2b;
@@ -15,14 +16,16 @@
 }
 
 .containerDiv {
-    max-width: 100%;
+    // max-width: 100%;
+    width: 100%;
     margin-right: 1rem;
     flex-shrink: 1;
+    align-self: flex-end;
 }
 .avatar {
     background-color: #adb5bd;
-    width: 6rem;
-    height: 6rem;
+    width: 8rem;
+    height: 8rem;
     border-radius: 50%;
     margin-right: 1rem;
     object-fit: cover;
@@ -38,7 +41,8 @@
 }
 
 .details {
-    width: 100%;
+    // width: 100%;
+
     font-size: 1.4rem;
     color: #adb5bd;
     // color: $colorAccentOrange;
