--- a/src/components/Bloggers/BloggersHeader/BloggersHeader.module.scss
+++ b/src/components/Bloggers/BloggersHeader/BloggersHeader.module.scss
@@ -24,10 +24,14 @@
 }
 .avatar {
     background-color: #adb5bd;
-    width: 8rem;
-    height: 8rem;
+    // width: 8rem;
+    // height: 8rem;
+    // margin-right: 1rem;
+    width: 14.5rem;
+    height: 14.5rem;
+    margin-right: 2.5rem;
+
     border-radius: 50%;
-    margin-right: 1rem;
     object-fit: cover;
     object-position: center center;
     flex-shrink: 0;
