--- a/src/components/Buttons/ButtonFollow/ButtonFollow.module.scss
+++ b/src/components/Buttons/ButtonFollow/ButtonFollow.module.scss
@@ -2,8 +2,9 @@
 
 .btnFollow,
 .btnFollowing  {
-    margin: 0 0 1.5rem 1rem;
+    // margin: 0 0 1.5rem 1rem;
     // margin: 0 0 0.5rem 1rem;
+    margin: 1rem 0 0 0;
 
     cursor: pointer;
     display: flex;
@@ -31,6 +32,16 @@
         color: $colorAccentOrange;
         transition: all 200ms;
     }
+
+    // @media only screen 
+    // and (device-width : 414px) 
+    // and (-webkit-device-pixel-ratio : 2),
+    // only screen 
+    // and (device-width : 414px) 
+    // and (-webkit-device-pixel-ratio : 3) { 
+    //     font-size: 1.4rem;
+    //     padding: 0.75rem 2rem;
+    // }
 }
 
 .btnFollowing {
