--- a/src/components/Bloggers/BloggersHeader/BloggersHeader.module.scss
+++ b/src/components/Bloggers/BloggersHeader/BloggersHeader.module.scss
@@ -41,6 +41,7 @@
     font-size: 1.8rem;
     font-weight: 900;
     color: #adb5bd;
+    line-height: 1.1;
     // margin-bottom: 1rem;
 }
 
@@ -88,7 +89,7 @@
     display: flex;
     width: 100%;
     justify-content: center;
-    
+
     font-size: 3rem;
     font-weight: 200;
     color: $colorAccentOrange;
