ExploreNavbar with buttons for switching between Blogger's List and Test's List.

--- a/src/components/Bloggers/BloggersHeader/BloggersHeader.module.scss
+++ b/src/components/Bloggers/BloggersHeader/BloggersHeader.module.scss
@@ -47,7 +47,7 @@
 
 .details {
     // width: 100%;
-
+    margin-top: 3rem;
     font-size: 1.4rem;
     color: #adb5bd;
     // color: $colorAccentOrange;
@@ -67,7 +67,7 @@
 .containerNumbers {
     width: 100%;
     display: flex;
-    padding-bottom: 3rem;
+    // padding-bottom: 3rem;
     // border-bottom: 1px solid #adb5bd1f;
 }
 
