--- a/src/components/Buttons/ButtonLabel/ButtonLabel.module.scss
+++ b/src/components/Buttons/ButtonLabel/ButtonLabel.module.scss
@@ -8,10 +8,9 @@
     color: #adb5bd;
     color: $colorAccentOrange;
     // color: #e2e7eb;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     font-weight: 300;
-    margin: 0 1rem;
-    padding-top: 0.2rem;
+    padding: 0 0 0.5rem 1rem;
     transition: all 300ms;
 }
 
