--- a/src/components/Buttons/ButtonFollowLong/ButtonFollowLong.module.scss
+++ b/src/components/Buttons/ButtonFollowLong/ButtonFollowLong.module.scss
@@ -11,11 +11,16 @@
     font-size: 1.2rem;
     font-weight: 700;
     color: #212529;
-    padding: 0.5rem 3rem;
+    padding: 0.3rem 3rem;
 
-    background-color: $colorAccentOrange;
-    border: 1px solid $colorAccentOrange;
+    // background-color: $colorAccentOrange;
+    background-color: transparent;
+    color: $colorAccentOrange;
+    border: 1px solid $colorBorderLight;
     border-radius: 2rem;
+
+    // new
+    width: 100%;
 
     &:hover {
         background-color: transparent;
