--- a/src/components/Buttons/ButtonFollowLong/ButtonFollowLong.module.scss
+++ b/src/components/Buttons/ButtonFollowLong/ButtonFollowLong.module.scss
@@ -30,8 +30,10 @@
 }
 
 .btnFollowing {
-    background-color: transparent;
-    color: $colorAccentOrange;
+    // background-color: transparent;
+    // color: $colorAccentOrange;
+    background-color: $colorAccentOrange;
+    color: #212529;
 
     &:hover {
         // background-color: $backColorTransparent;
