--- a/src/components/Buttons/ButtonIcon/ButtonIcon.module.scss
+++ b/src/components/Buttons/ButtonIcon/ButtonIcon.module.scss
@@ -19,8 +19,8 @@
 
 
     &:hover {
-        border-radius: 3rem;
-        background-color: #181b1e;
+        // border-radius: 3rem;
+        // background-color: #181b1e;
     }
     
 }
