--- a/src/components/Bloggers/BloggersHeader/BloggersHeader.module.scss
+++ b/src/components/Bloggers/BloggersHeader/BloggersHeader.module.scss
@@ -74,7 +74,8 @@
 .numberDiv {
     display: grid;
     width: 100%;
-    grid-template-columns: 1.5fr 1fr 1fr;
+    // grid-template-columns: 1.5fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     justify-items: center;
     // modification with numbers 3.3
     align-items: flex-end; 
