--- a/src/components/Test/ProgressBar/ProgressBar.module.scss
+++ b/src/components/Test/ProgressBar/ProgressBar.module.scss
@@ -6,11 +6,13 @@
 
 .divCounterButton {
     // Does -1rem create some bug?
-    margin-bottom: -1rem;
+    // margin-bottom: -1rem;
+    margin-bottom: -0.5rem;
     display: flex;
     width: 100%;
     justify-content: space-between;
-    align-items: flex-end;
+    // align-items: flex-end;
+    align-items: center;
 }
 
 .divButton,
@@ -49,10 +51,10 @@
     column-gap: 2px;
     width: 100%;
     height: 1.2rem;
-    margin: 1rem;
-    padding: 3px;
+    // margin: 1rem;
+    margin: 0.5rem;
+    padding: 3px 0;
     border-radius: 0.5rem;
-    // background-color: #1d2024;
 }
 
 .progressItem,
