--- a/src/components/Bloggers/BloggersHeader/BloggersHeader.module.scss
+++ b/src/components/Bloggers/BloggersHeader/BloggersHeader.module.scss
@@ -3,6 +3,8 @@
 .headerProfile {
     // margin from Logo
     margin: 1rem 0 0rem 0;
+    // for nav share btn
+    margin-top: -5.5rem;
     display: flex;
     width: 100%;
     
