--- a/src/components/Buttons/ButtonIcon/ButtonIcon.module.scss
+++ b/src/components/Buttons/ButtonIcon/ButtonIcon.module.scss
@@ -5,6 +5,9 @@
     width: 100%;
     padding: 0.75rem;
 
+    @media (min-width: 700px) {
+        padding: 0.6rem;
+    }
 }
 
 .btn {
@@ -12,11 +15,12 @@
     background-color: transparent;
     border: none;
     display: flex;
-    // height: 4rem;
-    // width: 4rem;
-    height: 3.5rem;
-    width: 3.5rem;
+    // height: 4.25rem;
+    width: 4.25rem;
 
+    @media (min-width: 700px) {
+        width: 3.5rem;
+    }
 
     &:hover {
         // border-radius: 3rem;
