--- a/src/components/Explore/ExploreNavbar/ExploreNavbar.module.scss
+++ b/src/components/Explore/ExploreNavbar/ExploreNavbar.module.scss
@@ -1,5 +1,5 @@
 .navbarContainer {
-    margin-top: 2rem;
+    // margin-top: 2rem;
     display: flex;
     width: 100%;
     justify-content: space-between;
