--- a/src/components/Profile/TestCard/TestCard.module.scss
+++ b/src/components/Profile/TestCard/TestCard.module.scss
@@ -5,8 +5,9 @@
     grid-template-columns: 4fr 6fr;
     cursor: pointer;
     width: 100%;
-    height: 15rem;
-    //height: 100%; have bug in Safari
+    // height: 15rem;
+    height: 16rem;
+    // height: 100%; //have bug in Safari
 
     background-color: #181b1e;
     border-radius: 0.5rem;
@@ -31,13 +32,22 @@
     align-items: flex-end;
     // width: 100%;
     height: 100%;
-    padding: 1rem  1rem  0.5rem 1.5rem;
+    // padding: 1rem  1rem  0.5rem 1.5rem;
+    // new
+    padding: 1rem 1rem 1rem 1.5rem;
+}
+
+.centerTitle {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    // justify-content: space-between;
 }
 
 .coverFrame {
     width: 100%;
     // height: 100%;
-    height: 15rem;
+    height: 16rem;
     border-radius: 0.5rem 0 0 0.5rem;
 }
 
@@ -66,16 +76,22 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    // justify-content: space-between;
 }
 
 .titleTest {
-    font-size: 1.6rem;
-    font-weight: 500;
+    // new
+    display: flex;
+    height: 100%;
+    align-items: center;
+
+    font-size: 1.8rem;
+    font-weight: 300;
     color: #adb5bd;
 
+
     @media (min-width: 700px) {
-        font-size: 1.4rem;
+        font-size: 1.6rem;
     }
 }
 
@@ -124,7 +140,8 @@
     position: relative;
     display: flex;
     align-items: center;
-    padding-top: 0.5rem;
+    // padding-top: 0.5rem;
+    padding-top: 1rem;
     height: 6rem;
 }
 
