--- a/src/components/Test/Card/Card.module.scss
+++ b/src/components/Test/Card/Card.module.scss
@@ -27,7 +27,8 @@
 .lockFullScreenBtn {
     position: absolute;
     z-index: 300;
-    top: 43%;
+    // top: 43%;
+    top: 38.5vh;
     align-self: flex-end;
 }
 
