--- a/src/components/Containers/Container/Container.module.scss
+++ b/src/components/Containers/Container/Container.module.scss
@@ -47,7 +47,8 @@
 
 .iconLock {
     position: absolute;
-    top: 45%;
+    // top: 45%;
+    top: 40vh;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 50;
