--- a/src/components/Profile/TestCard/TestCardLock/TestCardLock.module.scss
+++ b/src/components/Profile/TestCard/TestCardLock/TestCardLock.module.scss
@@ -1,38 +1,40 @@
 .iconLock {
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 20;
+    // left: 50%;
+    transform: translate(90%, -50%);
+    z-index: 100;
 
     width: 5rem;
     height: 5rem;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    opacity: 0.6;
 }
 
 .coverBlur {
     position: relative;
     width: 100%;
     height: 100%;
+    // height: 14rem;
     // backgroundImage from useRef.current
     /* Add the blur effect */
     filter: blur(3px) ;
-    -webkit-filter: blur(3px);
+    -webkit-filter: blur(2px);
 
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 
     border-radius: 0.5rem 0 0 0.5rem;
+    // z-index: 300;
 
     &::before {
         content: '';
         position: absolute;
         width: 100%;
         height: 100%;
-
         background-color: #181b1e88;
     }
 
