--- a/src/components/Profile/TestCard/TestCard.module.scss
+++ b/src/components/Profile/TestCard/TestCard.module.scss
@@ -148,6 +148,7 @@
 .status {
     font-size: 1.4rem;
     font-weight: 500;
+    line-height: 1;
     color: #adb5bd;
     width: 50%;
     padding-right: 2rem;
