--- a/src/components/Test/TestHeader/TestHeader.module.scss
+++ b/src/components/Test/TestHeader/TestHeader.module.scss
@@ -35,7 +35,9 @@
     color: $colorAccentOrange;
     margin-right: 25%;
     margin-bottom: 0.5rem;
-    // color: #8a8f94;
+    // new
+    line-height: 1;
+    margin-top: 2px;
 }
 
 .divText {
