--- a/src/components/Buttons/ButtonNav/ButtonNav.module.scss
+++ b/src/components/Buttons/ButtonNav/ButtonNav.module.scss
@@ -7,6 +7,11 @@
 .btn35Back,
 .btnBack,
 .btnReturn {   
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
     flex-shrink: 0;
     cursor: pointer;
     background-color: transparent;
@@ -15,8 +20,7 @@
     border-radius: 50%;
     width: 4rem;
     height: 4rem;
-    display: grid;
-    place-items: center;
+
     margin-bottom: 0.5rem;
 
     & .icon {
